# IC---Geiger-Muller-Detector

./: dados_geiger_sem_camisinha.csv  date_0cm.csv  date_10cm.csv  date_5cm.csv  pyproject.toml
src/ic/: analise.ipynb  analysis.ipynb  cpm_distance_data_final.csv  geiger_version2.ino  main.py
src/ic/code/geiger_version1/: geiger_version1.ino
src/ic/code/geiger_version2/: ana.ipynb  geiger_version2.ino
src/ic/dates/: 05_10_10_cm.csv  05_10_12_cm.csv  05_10_14_cm.csv  05_10_16_cm.csv  05_10_2_cm.csv  05_10_4_cm.csv  05_10_6_cm.csv  05_10_8_cm.csv  05_10_back_cm.csv  dados_geiger_0cm_colado.csv  date_15cm.csv  date_1cm.csv  teste16_10_001.csv  teste_16_10cm.csv  teste_16_5cm.csv
src/ic/dates/antigos/: back_ground.csv  dados_geiger_10cm.csv  date_20cm.csv
src/ic/dates/teste_atual/: teste_21_10cm.csv  teste_21_15cm.csv  teste_21__back_ground.csv  teste_23_10_2025_10cm.csv  teste_23_10_2025_12cm.csv  teste_23_10_2025_2cm.csv  teste_23_10_2025_4cm.csv  teste_23_10_2025_6cm.csv  teste_23_10_2025_8cm.csv
